--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.1",
     "@supabase/supabase-js": "^2.58.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
