--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,4 @@ VITE_SUPABASE_URL=https://xxxxx.supabase.co
 VITE_SUPABASE_ANON_KEY=eyJhbGciOi...
 
 # Configuration Google Maps
-VITE_GOOGLE_MAPS_API_KEY=AIzaSy...
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyDIn3viD2vBBE1AD7mgSgDmHLG8jVB_oBM
