--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
 # Ou alternative :
 # VITE_GOOGLE_API_KEY=your_google_api_key
+
+# Netlify Build Hook (pour déploiement depuis l'app)
+VITE_NETLIFY_BUILD_HOOK=https://api.netlify.com/build_hooks/your_build_hook_id
