--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.3.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
