--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^2.0.1",
     "@supabase/supabase-js": "^2.58.0",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
@@ -25,6 +26,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
