--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,7 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 
 # Configuration Google Maps
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyDIn3viD2vBBE1AD7mgSgDmHLG8jVB_oBM
+
+# OneSignal Push Notifications (optionnel)
+VITE_ENABLE_NOTIFS=false
+# VITE_ONESIGNAL_APP_ID=your_onesignal_app_id
