--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
 
 # Netlify Build Hook (pour déploiement depuis l'app)
 VITE_NETLIFY_BUILD_HOOK=https://api.netlify.com/build_hooks/your_build_hook_id
+
+# OneSignal Push Notifications (optionnel)
+VITE_ENABLE_NOTIFS=false
+# VITE_ONESIGNAL_APP_ID=your_onesignal_app_id
